--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
   - source activate test-environment
   - conda install -c pkgw aipy
   - pip install git+https://github.com/HERA-Team/pyuvdata.git@cal
+  - pip install git+https://github.com/zakiali/omnical.git
   - python setup.py install
 
 script: nosetests heracal
