--- a/.coveragerc
+++ b/.coveragerc
@@ -2,8 +2,10 @@
 omit =
      */tests/*
      */calibrations/*
+     */data/*
 
 [report]
 omit =
      */tests/*
      */calibrations/*
+     */data/*
