--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   - pip install git+https://github.com/zakiali/omnical.git
   - python setup.py install
 
-script: nosetests heracal --with-coverage --cover-package=heracal
+script: nosetests hera_cal --with-coverage --cover-package=hera_cal
 
 after_success:
   - coveralls
