--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ install:
   - conda install -c pkgw-forge aipy
   - pip install coveralls
   - pip install git+https://github.com/HERA-Team/pyuvdata.git
-  - pip install git+https://github.com/zakiali/omnical.git
+  - pip install git+https://github.com/HERA-Team/omnical.git
+  - pip install git+https://github.com/HERA-Team/linsolve.git
   - python setup.py install
 
 script: nosetests hera_cal --with-coverage --cover-package=hera_cal
