--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ install:
   - pip install git+https://github.com/HERA-Team/omnical.git
   - pip install git+https://github.com/HERA-Team/linsolve.git
   - pip install git+https://github.com/HERA-Team/hera_qm.git
+  - pip install git+https://github.com/HERA-Team/uvtools.git
   - python setup.py install
 
 script: nosetests hera_cal --with-coverage --cover-package=hera_cal
