--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ install:
   # create environment and install dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy nose pip matplotlib coverage pandas scikit-learn
   - source activate test-environment
-  - conda install -c conda-forge aipy
-  - pip install coveralls
+  - conda install -c conda-forge aipy pycodestyle coveralls
   - pip install git+https://github.com/HERA-Team/pyuvdata.git
   - pip install git+https://github.com/HERA-Team/omnical.git
   - pip install git+https://github.com/HERA-Team/linsolve.git
@@ -33,7 +32,9 @@ install:
   - pip install git+https://github.com/HERA-Team/uvtools.git
   - python setup.py install
 
-script: nosetests hera_cal --with-coverage --cover-package=hera_cal
+script:
+  - nosetests hera_cal --with-coverage --cover-package=hera_cal
+  - pycodestyle */*.py --ignore=E501,W601
 
 after_success:
   - coveralls
