modified:   build_lstbin_pipe.py 	modified:   lstbin_params.yaml

--- a/scripts/lstbin_params.yaml
+++ b/scripts/lstbin_params.yaml
@@ -10,20 +10,25 @@ rephase: False
 lst_start: 3.0
 ntimes_per_file: 60
 dlst: 0.000782985
+pols:
+  - xx
+  - xy
+  - yx
+  - yy
 data_files:
-  - '/Users/nkern/data/2458114/zen.2458114.*.xx.HH.uv'
-  - '/Users/nkern/data/2458115/zen.2458115.*.xx.HH.uv'
+  - '/Users/nkern/data/2458114/zen.2458114.*.{pol}.HH.uv'
+  - '/Users/nkern/data/2458115/zen.2458115.*.{pol}.HH.uv'
 
 # IO Parameters
 pbsfile: lstbin_pipe.sh
 overwrite: True
 outdir: ./
-outfile: lstbin.out
+outfile: 'lstbin_{pol}.out'
 
 # PBS Parameters
 queue: hera
 nodes: 1
 ppn: 1
 walltime: '12:00:00'
-arrayjob: False
+arrayjob: True
 pmem: 16gb
