--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,9 @@ install:
   - pip install git+https://github.com/HERA-Team/uvtools.git
   - python setup.py install
 
-script: nosetests hera_cal --with-coverage --cover-package=hera_cal
+script:
+  - nosetests hera_cal --with-coverage --cover-package=hera_cal
+  - pycodestyle */*.py --ignore=E501,W503,W601
 
 after_success:
   - coveralls
