--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   # create environment and install dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy nose pip matplotlib coverage pandas scikit-learn h5py
   - source activate test-environment
-  - conda install -c conda-forge aipy
+  - conda install -c conda-forge aipy pycodestyle
   - pip install coveralls
   - pip install git+https://github.com/HERA-Team/pyuvdata.git
   - pip install git+https://github.com/HERA-Team/omnical.git
