update conda in .travis and abscal.py pep8

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda install -q conda
+  - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
 
