--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - conda info -a
 
   # create environment and install dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy nose pip matplotlib coverage pandas scikit-learn h5py
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION 'numpy <1.15.3' scipy astropy nose pip matplotlib coverage pandas scikit-learn h5py
   - source activate test-environment
   - conda install -c conda-forge healpy aipy pycodestyle
   - pip install coveralls
