--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "2.7"
-#  - "3.6"
-
+  - "3.6"
 install:
   # ensure that we have the full tag information available for version.py
   - git fetch --unshallow --tags
@@ -30,15 +29,12 @@ install:
   - conda install -c conda-forge healpy aipy pycodestyle
   - pip install coveralls
   - pip install git+https://github.com/HERA-Team/pyuvdata.git
-  - pip install git+https://github.com/HERA-Team/omnical.git
   - pip install git+https://github.com/HERA-Team/linsolve.git
   - pip install git+https://github.com/HERA-Team/hera_qm.git
   - pip install git+https://github.com/HERA-Team/uvtools.git
   - python setup.py install
-
 script:
   - nosetests hera_cal --with-coverage --cover-package=hera_cal
-  - pycodestyle */*.py --ignore=E501,W291,W293,W503,W601
-
+  - pycodestyle */*.py --ignore=E501,W503,W601
 after_success:
   - coveralls
