--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ python:
   # We don't actually use the Travis Python, but this keeps it organized.
   - "2.7"
   - "3.6"
+env:
+  global:
+    - COVERALLS_PARALLEL=true
 install:
   # ensure that we have the full tag information available for version.py
   - git fetch --unshallow --tags
@@ -22,7 +25,6 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
   # create environment and install dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy nose pip matplotlib coverage pandas scikit-learn h5py
   - source activate test-environment
@@ -38,3 +40,5 @@ script:
   - pycodestyle */*.py --ignore=E501,W503,W601
 after_success:
   - coveralls
+notifications:
+  webhooks: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
