--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,9 @@ install:
   - pip install git+https://github.com/HERA-Team/linsolve.git
   - pip install git+https://github.com/HERA-Team/hera_qm.git
   - pip install git+https://github.com/HERA-Team/uvtools.git
-  - python setup.py install
 script:
   - nosetests hera_cal --with-coverage --cover-package=hera_cal
-  - pycodestyle */*.py --ignore=E501,W503,W601
+  - pycodestyle . --ignore=E501,W503,W601
 after_success:
   - coveralls
 notifications:
