--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ install:
   - source activate test-environment
   - conda install -c conda-forge healpy aipy pycodestyle
   - pip install coveralls
+  - pip install cached_property
   - pip install git+https://github.com/HERA-Team/pyuvdata.git
   - pip install git+https://github.com/HERA-Team/linsolve.git
   - pip install git+https://github.com/HERA-Team/hera_qm.git
