--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,8 @@ install:
   - pip install git+https://github.com/HERA-Team/linsolve.git
   - pip install git+https://github.com/HERA-Team/hera_qm.git
   - pip install git+https://github.com/HERA-Team/uvtools.git
+  - conda list
+  - python --version  
 script:
   - nosetests hera_cal --with-coverage --cover-package=hera_cal
   - pycodestyle . --ignore=E501,W291,W293,W503,W601
