--- a/.travis.yml
+++ b/.travis.yml
@@ -26,20 +26,18 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
   # create environment and install dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy nose pip matplotlib coverage pandas scikit-learn h5py six
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy astropy pip matplotlib coverage pandas scikit-learn h5py six pytest-cov coveralls cached-property
   - source activate test-environment
   - conda install -c conda-forge healpy aipy pycodestyle
-  - pip install coveralls
-  - pip install cached_property
   - pip install git+https://github.com/HERA-Team/pyuvdata.git
   - pip install git+https://github.com/HERA-Team/linsolve.git
   - pip install git+https://github.com/HERA-Team/hera_qm.git
   - pip install git+https://github.com/HERA-Team/uvtools.git
   - pip install git+https://github.com/HERA-Team/hera_sim.git
   - conda list
-  - python --version  
+  - python --version
 script:
-  - nosetests hera_cal --with-coverage --cover-package=hera_cal
+  - pytest hera_cal --cov=hera_cal --cov-report=term --cov-report=xml
   - pycodestyle . --ignore=E501,W291,W293,W503,W601
 after_success:
   - coveralls
