--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - scikit-learn
   - mpi4py
   - pyyaml
+  - pycodestyle
   - pip:
     - git+https://github.com/HERA-Team/hera_qm
     - git+https://github.com/HERA-Team/linsolve
