Add psutil as a required package to fix py2

--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - mpi4py
   - pyyaml
   - pycodestyle
+  - psutil
   - pip:
     - git+https://github.com/HERA-Team/hera_qm
     - git+https://github.com/HERA-Team/linsolve
