--- a/environment.yml
+++ b/environment.yml
@@ -25,5 +25,6 @@ dependencies:
     - git+https://github.com/HERA-Team/hera_qm
     - git+https://github.com/HERA-Team/linsolve
     - git+https://github.com/RadioAstronomySoftwareGroup/pyuvsim
+    - git+https://github.com/RadioAstronomySoftwareGroup/pyradiosky
     - git+https://github.com/HERA-Team/uvtools
     - git+https://github.com/HERA-Team/hera_sim
