add pytest-cov install.

--- a/ci/hera_cal_tests.yml
+++ b/ci/hera_cal_tests.yml
@@ -20,6 +20,9 @@ dependencies:
   - pyephem
   - basemap
   - future
+  - pytest-cov
+  - coveralls
+
   - pip:
     - git+https://github.com/RadioAstronomySoftwareGroup/pyuvdata
     - git+https://github.com/HERA-Team/hera_qm
