There are conflicts in python 3.8 testing that need to be resolved.

--- a/ci/hera_cal_tests.yml
+++ b/ci/hera_cal_tests.yml
@@ -4,8 +4,8 @@ channels:
   - defaults
 dependencies:
   - pip
-  - aipy>=3.2.3
-  - astropy
+  - aipy>=3.0.0rc2
+  - astropy>=3.2.3
   - h5py
   - numpy>=1.10
   - pytest
