--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,10 @@ jobs:
         source activate $ENV_NAME
         pytest --cov-report xml:./coverage.xml
 
+    - name: Python Style Checker
+      uses: andymckay/pycodestyle-action@0.1.3
+        pycodestyle . --ignore=E501,W291,W293,W503,W601
+
     - name: Upload Coverage (Ubuntu)
       if: matrix.os == 'ubuntu-latest' && success()
       run: |
