--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ addopts = --ignore=scripts --cov=hera_cal --cov-config=.coveragerc
 [pycodestyle]
 ignore = E501,W291,W293,W503,W601
 filename = *.py
-exclude = build/,docs/,.pytest_cache,.svn,CVS,.bzr,.hg,.git,__pycache__,dist/,scripts/,hera_qm.egg-info,hera_qm/data/
+exclude = build/,docs/,.pytest_cache,.svn,CVS,.bzr,.hg,.git,__pycache__,dist/,scripts/,hera_cal.egg-info,hera_cal/data/
 
 [pydocstyle]
 convention = numpy
