--- a/ci/hera_cal_tests.yml
+++ b/ci/hera_cal_tests.yml
@@ -9,7 +9,6 @@ dependencies:
   - h5py
   - numpy>=1.10
   - pytest
-  - pyuvdata
   - scipy
   - scikit-learn
   - mpi4py
@@ -29,5 +28,6 @@ dependencies:
     - git+https://github.com/HERA-Team/linsolve
     - git+https://github.com/RadioAstronomySoftwareGroup/pyuvsim
     - git+https://github.com/RadioAstronomySoftwareGroup/pyradiosky
-    - git+https://github.com/HERA-Team/uvtools
+    #- git+https://github.com/HERA-Team/uvtools
+    - git+https://github.com/HERA-Team/uvtools.git@cleanwidth_bugfix
     - git+https://github.com/HERA-Team/hera_sim
