--- a/ci/hera_cal_tests.yml
+++ b/ci/hera_cal_tests.yml
@@ -28,6 +28,5 @@ dependencies:
     - git+https://github.com/HERA-Team/linsolve
     - git+https://github.com/RadioAstronomySoftwareGroup/pyuvsim
     - git+https://github.com/RadioAstronomySoftwareGroup/pyradiosky
-    #- git+https://github.com/HERA-Team/uvtools
-    - git+https://github.com/HERA-Team/uvtools.git@cleanwidth_bugfix
+    - git+https://github.com/HERA-Team/uvtools
     - git+https://github.com/HERA-Team/hera_sim
