--- a/ci/hera_cal_tests.yml
+++ b/ci/hera_cal_tests.yml
@@ -24,9 +24,9 @@ dependencies:
 
   - pip:
     - git+https://github.com/RadioAstronomySoftwareGroup/pyuvdata
+    - git+https://github.com/HERA-Team/uvtools
     - git+https://github.com/HERA-Team/hera_qm
     - git+https://github.com/HERA-Team/linsolve
     - git+https://github.com/RadioAstronomySoftwareGroup/pyuvsim
     - git+https://github.com/RadioAstronomySoftwareGroup/pyradiosky
-    - git+https://github.com/HERA-Team/uvtools.git@skip_wgt_clean_passing_fix
     - git+https://github.com/HERA-Team/hera_sim
